frontend/src/routes/posts/ShowPost.css
.wrapper {
    display: flex;
    margin: 10px;
}

.panel {
    width: 100%;
    display: flex;
    flex-direction: column;
    margin: 16px 16px 2px 16px;
}

.comments {
    flex-grow: 4;
}

.profile-bar img,
.comments img {
    width: 32px;
    height: 32px;
    border-radius: 50%;
}

ul {
    padding: 0;
    list-style-type: none;
}

.profile-bar {
    display: flex;
    flex-direction: row;
    justify-items: baseline;
    align-items: center;
    gap: 5px;
    border-bottom: 1px solid lightgray;
    padding-bottom: 10px;
}

.dot-separator {
    margin: 0 5px;
}


/* Remove default button style */

button,
input[type="submit"],
input[type="reset"] {
    background: none;
    color: inherit;
    border: none;
    padding: 0;
    font: inherit;
    cursor: pointer;
    outline: inherit;
}

.key-box {
    width: 80%;
    margin-bottom: 10px;
    border: none;
    outline: none;
    font-size: 14px;
}

.post-bottom .material-icons:first-of-type {
    color: #ee515e;
}

.comment-wrapper {
    width: 100%;
    height: 50px;
    border-radius: 1px solid #dfdfdf;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-top: 2px solid lightgray;
}

.comment-box {
    width: 80%;
    height: 100%;
    border: none;
    outline: none;
    font-size: 14px;
}

.comment-wrapper input[type="submit"].button {
    width: 25%;
}

